--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -21,6 +21,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./backend
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -38,3 +40,4 @@ jobs:
           apikey: ${{ secrets.THUNDRA_APIKEY }}
           project_id: ${{ secrets.PROJECT_ID }}
           command: mvn -fn clean install
+          working-directory: ${{env.working-directory}}
