--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -21,8 +21,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./backend
+    defaults:
+      run:
+        working-directory: ./backend
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -39,5 +40,4 @@ jobs:
         with:
           apikey: ${{ secrets.THUNDRA_APIKEY }}
           project_id: ${{ secrets.PROJECT_ID }}
-          command: mvn -fn clean install
-          parent_pom_path: ${{env.working-directory}}
+          run: mvn -fn clean install
