--- a/.github/workflows/foresight.yml
+++ b/.github/workflows/foresight.yml
@@ -21,9 +21,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -40,4 +37,5 @@ jobs:
         with:
           apikey: ${{ secrets.THUNDRA_APIKEY }}
           project_id: ${{ secrets.PROJECT_ID }}
-          run: mvn -fn clean install
+          command: mvn -fn clean install
+          parent_pom_path: /home/runner/work/metasfresh/metasfresh/backend
