--- a/misc/parent-pom/pom.xml
+++ b/misc/parent-pom/pom.xml
@@ -89,8 +89,8 @@
             -->
         <dependency>
             <groupId>io.github.json-snapshot</groupId>
-            <artifactId>json-snapshot-PR</artifactId>
-            <version>1.0.22</version>
+            <artifactId>json-snapshot</artifactId>
+            <version>1.0.17</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -146,7 +146,13 @@
         </dependency>
         
         <!-- 
-        dependency of org.skyscreamer:jsonassert which is a dependency of json-snapshot
+        dependency of org.skyscreamer:jsonassert which is a dependency of 
+
+
+
+
+
+ot
         I get a ClassNotFoundException JSONException, despite ofc it *should* be there transitively 
         -->
         <dependency>
